fix: restore margin auto for better layout alignment

--- a/clientview/src/index.css
+++ b/clientview/src/index.css
@@ -1,7 +1,7 @@
 #root {
   max-width: 1280px;
   width: 100vw;
-  /* margin: 0 auto; */
+  margin: 0 auto; 
   text-align: start;
 
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
